@@ -6,7 +6,8 @@ Version 1.0.7
 -----------------------------------
 * improved styling of footer navigation menu
 * changed Google Font URL to https in Customizer
-* updated EDD Plugin Updater class to version 1.6.9
+* changed HTML markup of header bar
+* updated EDD Plugin Updater class
 
 Version 1.0.6
 -----------------------------------
